Align platform ops: monitoring resource types, audit/sysconfig, gateway grants, docs and SQL seeds
- Extend monitoring call logs and KPIs with resource_type filtering and call-summary API usage
- Remove model config and unassigned-user filter paths; tighten security and Casbin alignment
- Add system config ACL/whitelist DTOs, MCP connectivity probe, OpenAPI config
- Add sql migrations, incremental scripts, seed_resource_ops_demo, and resource-ops closure doc
- Update dashboard, registry, review, and tests for the above

Made-with: Cursor